# lobster

./: .gitignore  .mcp.json  ARCHITECTURE.md  Cargo.toml  QUESTIONNAIRE.md  README.md  TESTING.md  flake.nix  result
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  release.yml
.hegel/constants/: 0469f5ec984659a9  06d6ccb4e735e03d  087a311c18c63c99  092832aba4e6106e  0c02d7fe10bd7c75  0e01cae08e46abaa  0f1a775618388a07  109c19029dcae22f  1158e4ca694b55e3  15392eb50cbc2070  15eb71614d03ef6a  17de449d715667f5  18af6f4efe6a3eaf  19f2f05be6662b4b  1a8ab695cc82639c  2028f7fa7799a5ac  228596311b0eb513  232543654f10c898  25b51d8497d05f30  26121fa91dca3e00  289132263d704103  29395836a5a73b14  2a35a5a027f984b0  2a40179c0e556b98  2a86b17dfcaec911  2bab31f5e888773e  2bede5c723cdac02  2d00ee2df0442a94  2f9380d60eb9b016  3336d3ed8939ba31  368ae216030c4e8c  3705dca92bbb68a6  39a4d168da47fca5  3bf6f55662e20e54  3c916cdd652162c9  3cae80905ccc11db  3d3c053d964d4e5c  3db0b798a7b2dc39  40b1034a8bbb3f59  40c9693d07d3d074  (+146 more)
.hegel/examples/04e6b3400353b141/: 6b90ee7f0da3a526  9eaf5028ca318f35
.hegel/examples/6b90ee7f0da3a526/: 4ff3788aa5ae86c8  dd796d1daaae0ecf
docs/: RETRIEVAL_ROUTING.md  grafeo.md  pylate-rs.md  redb.md  rig-core.md  tantivy.md
src/: lib.rs  main.rs
src/app/: config.rs  failopen.rs  hooks_config.rs  init.rs  llm.rs  mod.rs  status.rs
src/dream/: consolidation.rs  mod.rs  patterns.rs  profile.rs  scheduler.rs  supersession.rs  workers.rs
src/embeddings/: encoder.rs  maxsim.rs  mod.rs  proxy.rs
src/episodes/: decisions.rs  finalize.rs  heuristic_summarizer.rs  mod.rs  rig_summarizer.rs  segmenter.rs  sequences.rs  summarizer.rs
src/extract/: heuristic.rs  mod.rs  rig_extractor.rs  traits.rs  validate.rs
src/graph/: db.rs  indexes.rs  mod.rs  projection.rs  rebuild.rs
src/hooks/: capture.rs  core_memory.rs  events.rs  mod.rs  recall.rs  redact.rs  segmentation.rs  tiered.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/rank/: classifier.rs  context.rs  evidence.rs  mod.rs  recency.rs  rerank.rs  retrieval.rs  route.rs  routes.rs  scoring.rs
src/store/: canon.rs  coordinator.rs  crud.rs  db.rs  ids.rs  ingest.rs  mod.rs  schema.rs  staging.rs  states.rs  tables.rs  visibility.rs  watcher.rs
tests/: decision_recall_test.rs  evidence_invariant_test.rs  hook_recall_test.rs  rebuild_test.rs  smoke_test.rs  summary_versioning_test.rs  temporal_edges_test.rs
