[package]
name = "lobster"
version = "0.1.0"
edition = "2024"

[dependencies]
grafeo = "0.5.34"
pylate-rs = { version = "1.0.4", git = "https://github.com/cfcosta/pylate-rs" }
redb = "4.0.0"
rig-core = "0.34.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51.1", features = ["full"] }

[features]
default = []
cuda = ["pylate-rs/cuda"]
