[package]
name = "lobster"
version = "0.1.0"
edition = "2024"
description = "A local, deterministic, per-repo memory system for Claude Code"
license = "MIT"
rust-version = "1.86"

[dependencies]
anyhow = "1"
candle-core = "0.10.2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
grafeo = "0.5.34"
notify = "8.2.0"
pylate-rs = { version = "1.0.4", git = "https://github.com/cfcosta/pylate-rs" }
redb = "4.0.0"
rig-core = "0.34.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hegeltest = "0.4"
tempfile = "3"

[features]
default = []
cuda = ["pylate-rs/cuda"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
